--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="container">
-    <form th:method="post" th:action="@{/logIn}" th:object="${account}">
+    <form th:method="post" th:action="@{/login/logIn}" th:object="${account}">
         <div class="field-div">
             <label for="login">Login</label>
             <input type="text" th:field="*{login}" id="login">
